objects/UPC_Service_Credit_Note__c.object
<CustomObject>
    <description>A junction object allowing services to be associated to credit notes</description>
    <fields>
        <fullName>UPC_Credit_Note_Approval_Status__c</fullName>
        <formula>TEXT(UPC_Credit_Note__r.UPC_Approval_Status__c)</formula>
        <label>Credit Note Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Credit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note</label>
        <referenceTo>UPC_Credit_Note__c</referenceTo>
        <relationshipLabel>Service Credit Notes</relationshipLabel>
        <relationshipName>Service_Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Name__c</fullName>
        <formula>UPC_Service__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service_SAP_Id__c</fullName>
        <formula>UPC_Service__r.UPC_Taifun_SAP_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service SAP Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Service Credit Notes</relationshipLabel>
        <relationshipName>Service_Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Credit Note</label>
    <nameField>
        <displayFormat>SCN-{00000}</displayFormat>
        <label>Service Credit Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>